[package]
name = "sastm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.14"
tempfile = "3.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.5.2"
mockall = "0.13.0"
shaku = "0.6.1"
regex = "1.11.0"
